Design and Architecture

--- a/convisoft.ipynb
+++ b/convisoft.ipynb
@@ -361,6 +361,61 @@
     "\n",
     "print(\"*\" * 80)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91e3b67d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the architecture.md file that includes all diagrams, schema and links to PRD and ADR\n",
+    "database_schema_sql=load_artifact(\"artifacts/convisoft_schema.sql\")\n",
+    "\n",
+    "architecture_md_prompt = f\"\"\"\n",
+    "You are an expert technical writer and architect.\n",
+    "\n",
+    "Generate a comprehensive architecture.md file for the Contracting Visualization Software project. \n",
+    "The file should include:\n",
+    "- A title and brief introduction. Title: \"Contracting Visualization Software - Design and Architecture Overview\"\n",
+    "- Embedded links to the ERD, Context, Sequence diagrams, and Schema (use markdown image syntax).\n",
+    "   ![ERD Diagram](./convisoft_erd_diagram.png)\n",
+    "   ![Context Diagram](./convisoft_context_diagram.png)\n",
+    "   ![Sequence Diagram](./convisoft_sequence_diagram.png)\n",
+    "- Database schema\n",
+    "    ```sql\n",
+    "    {database_schema_sql}\n",
+    "    ```\n",
+    "- A brief description of each diagram and its purpose.\n",
+    "   - ERD Diagram: Illustrates the data model, entities, attributes, and relationships.\n",
+    "   - Context Diagram: Shows the system's interactions with external entities.\n",
+    "   - Sequence Diagram: Depicts the flow of messages between components.\n",
+    "- Links to the PRD and ADR markdown files.\n",
+    "   - [Product Requirements Document (PRD)](./convisoft_prd.md)\n",
+    "   - [Architecture Decision Records (ADR)](./convisoft_adr.md)\n",
+    "- Add a Notes section\n",
+    "   - Make sure the image files are in the same directory as `architecture.md` or adjust the paths accordingly.\n",
+    "   - If viewing in VS Code or GitHub, images and links should render if the paths are correct and files exist.\n",
+    "\n",
+    "- Any additional notes or summary that would help a developer or stakeholder understand the architecture at a glance.\n",
+    "\n",
+    "Use clear markdown formatting, section headings, and concise descriptions.\n",
+    "\"\"\"\n",
+    "\n",
+    "print(\"*\" * 80)\n",
+    "print(\"Generating architecture.md file that includes all diagrams and links to PRD and ADR\", app_name)\n",
+    "architecture_md_content = get_completion(architecture_md_prompt, client, model_name, api_provider)\n",
+    "architecture_md_content = clean_llm_output(architecture_md_content)\n",
+    "print(architecture_md_content)\n",
+    "\n",
+    "if not architecture_md_content:\n",
+    "    raise ValueError(\"No architecture.md content generated\")\n",
+    "else:\n",
+    "    save_artifact(architecture_md_content, \"artifacts/architecture3.md\", overwrite=True)\n",
+    "    print(\"architecture.md generated successfully, saving to artifacts...\")\n",
+    "\n",
+    "print(\"*\" * 80)"
+   ]
   }
  ],
  "metadata": {
