Creating db and adding seed data

--- a/schema/schema_generation.ipynb
+++ b/schema/schema_generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a5bcbcdf",
    "metadata": {},
    "outputs": [
@@ -19,20 +19,32 @@
     "import sys\n",
     "import os\n",
     "\n",
-    "try:\n",
-    "    project_root = os.path.abspath(os.path.join(os.getcwd(), '..', '..'))\n",
-    "except IndexError:\n",
-    "    project_root = os.path.abspath(os.path.join(os.getcwd()))\n",
+    "# Get the current working directory and navigate to project root\n",
+    "current_dir = os.getcwd()\n",
+    "print(f\"Current working directory: {current_dir}\")\n",
+    "\n",
+    "# From schema folder, go up one level to reach project root\n",
+    "project_root = os.path.abspath(os.path.join(current_dir, '..'))\n",
+    "print(f\"Project root: {project_root}\")\n",
     "\n",
     "if project_root not in sys.path:\n",
     "    sys.path.insert(0, project_root)\n",
+    "    print(f\"Added {project_root} to sys.path\")\n",
     "\n",
-    "from utils import setup_llm_client, get_completion, save_artifact, load_artifact, clean_llm_output, prompt_enhancer\n",
+    "# Verify the utils directory exists\n",
+    "utils_path = os.path.join(project_root, 'utils')\n",
+    "print(f\"Utils path exists: {os.path.exists(utils_path)}\")\n",
+    "\n",
+    "try:\n",
+    "    from utils import setup_llm_client, get_completion, save_artifact, load_artifact, clean_llm_output, prompt_enhancer\n",
+    "    print(\"Successfully imported utils functions!\")\n",
+    "except ImportError as e:\n",
+    "    print(f\"Import error: {e}\")\n",
+    "    print(f\"sys.path: {sys.path}\")\n",
     "\n",
     "client, model_name, api_provider = setup_llm_client(model_name=\"o3\")\n",
     "\n",
-    "\n",
-    "convisoft_prd = load_artifact(\"capstone/convisoft_prd.md\")\n"
+    "convisoft_prd = load_artifact(\"capstone/convisoft_prd.md\")"
    ]
   },
   {
@@ -1206,11 +1218,140 @@
     "print(\"\\n--- SQLAlchemy Models ---\\n\")\n",
     "print(alchemy_models)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68d02c1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'utils'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m project_root \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m sys.path:\n\u001b[32m     12\u001b[39m     sys.path.insert(\u001b[32m0\u001b[39m, project_root)\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mutils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m setup_llm_client, get_completion, save_artifact, load_artifact, clean_llm_output, prompt_enhancer\n\u001b[32m     16\u001b[39m client, model_name, api_provider = setup_llm_client(model_name=\u001b[33m\"\u001b[39m\u001b[33mgemini-2.5-pro\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     19\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mcreate_database\u001b[39m(db_path, schema_path, seed_path):\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'utils'"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "import sqlite3\n",
+    "\n",
+    "# Get the current working directory and navigate to project root\n",
+    "current_dir = os.getcwd()\n",
+    "print(f\"Current working directory: {current_dir}\")\n",
+    "\n",
+    "# From schema folder, go up one level to reach project root\n",
+    "project_root = os.path.abspath(os.path.join(current_dir, '..'))\n",
+    "print(f\"Project root: {project_root}\")\n",
+    "\n",
+    "if project_root not in sys.path:\n",
+    "    sys.path.insert(0, project_root)\n",
+    "    print(f\"Added {project_root} to sys.path\")\n",
+    "\n",
+    "# Verify the utils directory exists\n",
+    "utils_path = os.path.join(project_root, 'utils')\n",
+    "print(f\"Utils path exists: {os.path.exists(utils_path)}\")\n",
+    "\n",
+    "try:\n",
+    "    from utils import setup_llm_client, get_completion, save_artifact, load_artifact, clean_llm_output, prompt_enhancer\n",
+    "    print(\"Successfully imported utils functions!\")\n",
+    "except ImportError as e:\n",
+    "    print(f\"Import error: {e}\")\n",
+    "    print(f\"sys.path: {sys.path}\")\n",
+    "\n",
+    "client, model_name, api_provider = setup_llm_client(model_name=\"gemini-2.5-pro\")\n",
+    "\n",
+    "\n",
+    "def create_database(db_path, schema_path, seed_path):\n",
+    "    \"\"\"Creates and seeds a SQLite database from SQL files.\"\"\"\n",
+    "    if not os.path.exists(schema_path):\n",
+    "        print(f\"Error: Schema file not found at {schema_path}\")\n",
+    "        return\n",
+    "    \n",
+    "    conn = None\n",
+    "    try:\n",
+    "        # TODO: Connect to the SQLite database. This will create the file if it doesn't exist.\n",
+    "        conn = sqlite3.connect(db_path)\n",
+    "        cursor = conn.cursor()\n",
+    "        print(f\"Successfully connected to database at {db_path}\")\n",
+    "\n",
+    "        cursor.execute(\"SELECT name FROM sqlite_master WHERE type='table';\")\n",
+    "        tables = cursor.fetchall()\n",
+    "        \n",
+    "        # Drop each table\n",
+    "        for table_name in tables:\n",
+    "            table_name = table_name[0]  # Extract table name from tuple\n",
+    "            if table_name == \"sqlite_sequence\":\n",
+    "                continue  # Skip internal SQLite table\n",
+    "            cursor.execute(f\"DROP TABLE IF EXISTS {table_name};\")\n",
+    "            print(f\"Dropped table: {table_name}\")\n",
+    "        \n",
+    "        # Commit changes\n",
+    "        conn.commit()\n",
+    "        print(\"Database cleaned successfully.\")\n",
+    "\n",
+    "        # TODO: Read the content of the schema file using load_artifact.\n",
+    "        schema_sql = load_artifact(schema_path)\n",
+    "        if not schema_sql:\n",
+    "            print(f\"Error: Could not read schema from {schema_path}\")\n",
+    "            return\n",
+    "        \n",
+    "        # TODO: Execute the schema SQL script.\n",
+    "        # Hint: Use cursor.executescript() for multi-statement SQL strings.\n",
+    "        cursor.executescript(schema_sql)\n",
+    "        \n",
+    "        print(\"Tables created successfully.\")\n",
+    "\n",
+    "         # Check if the seed data file exists. If it does, load and execute it.\n",
+    "        if os.path.exists(seed_path):\n",
+    "            seed_sql = load_artifact(seed_path)\n",
+    "            if seed_sql:\n",
+    "                # Split the seed SQL into individual statements\n",
+    "                seed_statements = seed_sql.split(\";\")\n",
+    "                for i, statement in enumerate(seed_statements):\n",
+    "                    statement = statement.strip()\n",
+    "                    if statement:  # Skip empty statements\n",
+    "                        try:\n",
+    "                            cursor.execute(statement)\n",
+    "                        except sqlite3.Error as e:\n",
+    "                            print(f\"Error inserting seed data at statement {i + 1}: {statement}\")\n",
+    "                            print(f\"SQLite Error: {e}\")\n",
+    "                            break\n",
+    "                else:\n",
+    "                    print(\"Seed data inserted successfully.\")\n",
+    "            else:\n",
+    "                print(f\"Warning: Could not read seed data from {seed_path}\")\n",
+    "\n",
+    "        # TODO: Commit the changes to the database.\n",
+    "        conn.commit()\n",
+    "        \n",
+    "    except sqlite3.Error as e:\n",
+    "        print(f\"Database error: {e}\")\n",
+    "    finally:\n",
+    "        # TODO: Ensure the connection is closed if it was opened.\n",
+    "        if conn:\n",
+    "            conn.close()\n",
+    "        print(\"Database connection closed.\")\n",
+    "\n",
+    "# Define file paths\n",
+    "db_file = os.path.join(project_root, \"artifacts\", \"convisoft.db\")\n",
+    "schema_file = os.path.join(project_root, \"artifacts\", \"convisoft_schema.sql\")\n",
+    "seed_file = os.path.join(project_root, \"artifacts\", \"convisoft_seed_data.sql\")\n",
+    "\n",
+    "# Execute the function\n",
+    "create_database(db_file, schema_file, seed_file)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
