Update architecture docs, diagrams, and notebook

--- a/convisoft.ipynb
+++ b/convisoft.ipynb
@@ -403,7 +403,7 @@
     "\"\"\"\n",
     "\n",
     "print(\"*\" * 80)\n",
-    "print(\"Generating architecture.md file that includes all diagrams and links to PRD and ADR\", app_name)\n",
+    "print(\"Generating architecture.md file that includes all diagrams and links to PRD and ADR for\", app_name)\n",
     "architecture_md_content = get_completion(architecture_md_prompt, client, model_name, api_provider)\n",
     "architecture_md_content = clean_llm_output(architecture_md_content)\n",
     "print(architecture_md_content)\n",
