Update ADR and notebook after fast-forward from main

--- a/convisoft.ipynb
+++ b/convisoft.ipynb
@@ -53,7 +53,7 @@
     "    del sys.modules['utils']\n",
     "\n",
     "from utils import setup_llm_client, get_completion, save_artifact, clean_llm_output\n",
-    "client, model_name, api_provider = setup_llm_client(model_name=\"gpt-4.1\")\n",
+    "client, model_name, api_provider = setup_llm_client(model_name=\"gpt-4o\")\n",
     "\n",
     "app_name=\"Contracting Visualization Software\"\n",
     "problem_statement = f\"\"\"\n",
@@ -138,47 +138,58 @@
     "adr_prompt = f\"\"\"\n",
     "You are an expert software architect.\n",
     "\n",
-    "Your task is to create a set of Architercture Decision Record based on the PRD for the following system:\n",
+    "Your task is to create a set of comprehensive Architecture Decision Records (ADR) for the following system, strictly aligned to the Product Requirements Document (PRD):\n",
     "\n",
     "System PRD: {prd_md_artifact}\n",
     "System: {app_name}\n",
     "System Description: {app_description}\n",
     "\n",
-    "The ADR includes:\n",
-    "•\tContext, decision, status, consequences, justification, and alternatives for each ADR\n",
-    "•\tAt minimum, cover:\n",
-    "      - Framework choice\n",
-    "      - ML model baseline\n",
-    "      - Feature engineering\n",
-    "      - Database\n",
-    "      - Security\n",
-    "      - Observability\n",
-    "      - Model transparency\n",
-    "      - Awards API design\n",
-    "Ensure it 100% strictly aglined to the PRD.\n",
-    "Also include an auto-generated technical decision table with the format:\n",
-    "Rule → Signal → Decision → Justification\n",
+    "Instructions:\n",
     "\n",
-    "Formatting requirements:\n",
-    "- Use markdown formatting with appropriate headings and subheadings.\n",
-    "- Include tables for personas and user stories.\n",
-    "- Use bullet points for lists of requirements, goals, and other items.\n",
-    "- Ensure clarity and conciseness in language.\n",
-    "\n",
-    "Make sure to cover all aspects of the system comprehensively.\n",
-    "The ADR should be detailed and structured to guide the development team effectively.\n",
-    "Use Markdown formatting with appropriate headings and subheadings.\n",
+    "* Be verbose and clear to guide the development team.\n",
+    "* First, display a markdown table of Personas and User Stories relevant to the system.\n",
+    " - The Personas table should include: Persona, Role, Goals, Pain Points.\n",
+    " - The User Stories table should include: Story ID, Persona, User Story, Story Points, Acceptance Criteria. The acceptance criteria must include measurable and testable items with HTTP codes where applicable.\n",
+    "* Then, for each ADR, include:\n",
+    "    - Context: Background, rationale, relevant requirements, constraints, and goals from the PRD for each ADR.\n",
+    "        • At minimum, cover:\n",
+    "            o Framework choice\n",
+    "            o ML model baseline\n",
+    "            o Feature engineering\n",
+    "            o Database\n",
+    "            o Security\n",
+    "            o Observability\n",
+    "            o Model transparency\n",
+    "            o Awards API design\n",
+    "    - Decision: The chosen solution or approach, clearly stated.\n",
+    "    - Status: Current state (e.g., Proposed, Accepted, Deprecated).\n",
+    "    - Consequences: Impact of the decision including effects on other parts of the system.\n",
+    "    - Justification: A detailed explanation of the reasons for choosing this option, alignment with requirements and goals.\n",
+    "    - Alternatives: Other options considered, with pros and cons.\n",
+    "    - Display the ADRs in numbered format with clear headings and subheadings.\n",
+    "    - At the top of the ADR section, add a heading \"Architecture Decision Records (ADR)\". Then, for each ADR, use a subheading with the format ADR number and title, e.g., \"ADR 001: Framework Choice\".\n",
+    " \n",
+    "* Use bullet points for lists of requirements, goals, and consequences.\n",
+    "* Cover all major architectural decisions (framework, ML model, database, security, observability, model transparency, API design, etc.).\n",
+    "* Additionally, generate a technical decision table in markdown with the format: | Rule | Signal | Decision | Justification |\n",
+    "Ensure all content is strictly aligned to the PRD and detailed enough for development guidance.\n",
+    "Include markdown formatting with appropriate headings and subheadings.\n",
+    "Include title and table of contents at the top.\n",
+    "Display the system description at the top.\n",
+    "Include a summary section at the end with:\n",
+    "- Key decisions made\n",
+    "- Overall architecture overview\n",
     "\"\"\"\n",
     "\n",
     "print(\"*\" * 80)\n",
     "print(\"Generating ADR for\", app_name)\n",
-    "adr_from_template_output = get_completion(adr_prompt, client, model_name, api_provider)\n",
-    "adr_from_template_output = clean_llm_output(adr_from_template_output)\n",
+    "adr_from_template_output = get_completion(adr_prompt, client, model_name, api_provider,temperature=0.3)\n",
+    "adr_from_template_output = clean_llm_output(adr_from_template_output,language=\"markdown\")\n",
     "print(adr_from_template_output)\n",
     "if not adr_from_template_output:\n",
     "    raise ValueError(\"No ADR output generated\")\n",
     "else:\n",
-    "    save_artifact(adr_from_template_output, \"artifacts/convisoft_adr.md\", overwrite=True)\n",
+    "    save_artifact(adr_from_template_output, \"artifacts/convisoft_adr2.md\", overwrite=True)\n",
     "    print(\"ADR generated successfully, saving to artifacts...\")\n",
     "\n",
     "print(\"*\" * 80)"
