updating hugginface agent

--- a/backend/Hugging_Face_smol_agent_contract_search.ipynb
+++ b/backend/Hugging_Face_smol_agent_contract_search.ipynb
@@ -38,6 +38,8 @@
       "Added c:\\Users\\labadmin\\Documents\\repo\\KMSH_contracting to sys.path\n",
       "Utils path exists: True\n",
       "Successfully imported utils functions!\n",
+      "OPENAI_API_KEY found!\n",
+      "Successfully imported utils functions!\n",
       "OPENAI_API_KEY found!\n"
      ]
     }
@@ -8893,14 +8895,54 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔄 Importing contract data into database...\n",
+      "✅ Successfully imported 10 contracts into database\n",
+      "📊 Total records in database: 10\n",
+      "🗄️ Database location: c:\\Users\\labadmin\\Documents\\repo\\KMSH_contracting\\artifacts/app/convisoft.db\n",
+      "\n",
+      "📋 Verifying database contents:\n",
+      "\n",
+      "🏆 Top 5 Contracts by Value:\n",
+      "1. Alliant 2 Government-wide Acquisition Contract\n",
+      "   Company: Multiple Vendors\n",
+      "   Value: $65,000,000,000\n",
+      "   Date: 2017-12-15\n",
+      "\n",
+      "2. Enterprise Infrastructure Solutions (EIS)\n",
+      "   Company: General Services Administration\n",
+      "   Value: $50,000,000,000\n",
+      "   Date: 2017-09-29\n",
+      "\n",
+      "3. NASA SEWP V (Solutions for Enterprise-Wide Procurement)\n",
+      "   Company: Multiple Vendors\n",
+      "   Value: $20,000,000,000\n",
+      "   Date: 2015-04-01\n",
+      "\n",
+      "4. Department of Veterans Affairs Electronic Health Record\n",
+      "   Company: Cerner Corporation\n",
+      "   Value: $16,100,000,000\n",
+      "   Date: 2018-05-17\n",
+      "\n",
+      "5. GSA Multiple Award Schedule (MAS)\n",
+      "   Company: IBM Corporation\n",
+      "   Value: $12,000,000,000\n",
+      "   Date: 2019-07-15\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Import Contract Data into Database\n",
     "import sqlite3\n",
     "import json\n",
     "from datetime import datetime\n",
     "\n",
-    "def import_contracts_to_database(contracts_data, db_path=\"contracts.db\"):\n",
+    "def import_contracts_to_database(contracts_data, db_path=\"artifacts/convisoft.db\"):\n",
     "    \"\"\"\n",
     "    Import contract data into SQLite database\n",
     "    \"\"\"\n",
@@ -9071,11 +9113,11 @@
     "\n",
     "# Import the data into the database\n",
     "print(\"🔄 Importing contract data into database...\")\n",
-    "imported_count = import_contracts_to_database(mock_contracts, db_path=os.path.join(project_root, \"contracts.db\"))\n",
+    "imported_count = import_contracts_to_database(mock_contracts, db_path=os.path.join(project_root, \"artifacts/convisoft.db\"))\n",
     "\n",
     "# Verify the import by querying the database\n",
     "print(\"\\n📋 Verifying database contents:\")\n",
-    "conn = sqlite3.connect(os.path.join(project_root, \"contracts.db\"))\n",
+    "conn = sqlite3.connect(os.path.join(project_root, \"artifacts/convisoft.db\"))\n",
     "cursor = conn.cursor()\n",
     "\n",
     "cursor.execute('''\n",
@@ -9099,9 +9141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📁 No artifact file found - using mock data instead\n"
+     ]
+    }
+   ],
    "source": [
     "# Alternative: Import data from agent response or JSON file\n",
     "\n",
