'file updates from live demo'

--- a/backend/api_gen.ipynb
+++ b/backend/api_gen.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 3 - Lab 1: AI-Driven Backend Development\n",
+    "# AI-Driven Backend Development\n",
     "\n",
     "**Objective:** Generate a complete FastAPI backend application, including Pydantic and SQLAlchemy models, and then perform the critical engineering task of integrating the generated code with the live SQLite database created on Day 2.\n",
     "\n",
